<resources>
    <string name="app_name">GigsReminder</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="venues">Venues</string>
    <string name="venue">Venue</string>
    <string name="band">Band</string>
    <string name="town">Town</string>
    <string name="date">Date</string>
    <string name="hour">Hour</string>
    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="lineup">Lineup</string>

    <string name="event_add">Add event</string>
    <string name="event_edit">Edit event</string>
    <string name="venue_add">Add venue</string>
    <string name="venue_edit">Edit venue</string>
    <string name="events_list">Events list</string>
    <string name="venues_list">Venues list</string>
    <string name="band_error">Enter Band Name</string>
    <string name="town_error">Enter Town Name</string>
    <string name="date_error">Enter Valid Date DD/MM/YYYY</string>
    <string name="time_error">Enter Valid Time</string>
    <string name="venue_error">Enter Venue Name</string>
    <string name="sorting_methods">Sort By:</string>
    <string name="event_delete">Delete event?</string>
    <string name="venue_delete">Delete venue?</string>
    <string name="venue_already_assigned">This venue is already assigned to an event.</string>
    <string name="get_directions">Get directions</string>
    <string name="upcoming_events">Upcoming events</string>
    <string name="no_upcoming_events">No upcoming events</string>
    <string name="no_phone_number">No phone number available</string>
    <string name="no_supports">This event doesn\'t have support bands</string>
    <string name="add_event_to_calendar">Add event to calendar</string>

    <string name="places_api_key">AIzaSyAD3BxkppK0NhSdhX7F7CO970MDDb5i6Ic</string>
    <string name="maps_api_key">AIzaSyDSgjqdLzA43PkkBXSKH9YN1nVz-jITW1Q</string>
    <string name="geolocation_api_key">AIzaSyAIKAyM53iMxjuruQ_x2sMusrZwwATuaUc</string>
</resources>
