<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".AddEvent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addGigToolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary" />

        <TableLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_below="@id/addGigToolbar">

            <TableRow
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/band_name"
                    android:text="@string/band"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/BandValue"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:layout_width="200dp" />

            </TableRow>

            <TableRow
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/town"
                    android:text="@string/town"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/TownValue"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:layout_width="200dp" />

            </TableRow>

            <TableRow
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/eventDate"
                    android:text="@string/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/EventDateValue"
                    android:layout_height="wrap_content"
                    android:layout_width="200dp" />

            </TableRow>

            <TableRow
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/eventTime"
                    android:text="@string/hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/EventTimeValue"
                    android:layout_height="wrap_content"
                    android:layout_width="200dp" />

            </TableRow>

            <TableRow
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/eventVenue"
                    android:text="@string/venue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp" />

                <Spinner
                    android:id="@+id/EventVenueValue"
                    android:layout_height="wrap_content"
                    android:layout_width="200dp"
                    android:prompt="@string/venue"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/Submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:onClick="saveEvent"
                    tools:layout_editor_absoluteX="12dp"
                    tools:layout_editor_absoluteY="89dp" />

                <Button
                    android:id="@+id/AddVenueButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/venue_add"
                    android:onClick="addNewVenue"
                    tools:layout_editor_absoluteX="12dp"
                    tools:layout_editor_absoluteY="89dp" />

            </TableRow>
        </TableLayout>

</RelativeLayout>